# actix_mvc_boilerplate_test

./: .env  Cargo.toml
src/: main.rs
src/controllers/: handlers.rs
src/models/: schema.rs
