[package]
name = "actix_mvc_boilerplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "=3.0.0-beta.5"
actix-service = "=2.0.0-beta.5"
actix-web = "=4.0.0-beta.5"

serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.4", features = ["runtime-async-std-native-tls", "mysql"] }
dotenv = "0.15"
actix-web-codegen = { version = "^4.1.0" }
watch = "0.2.2"
serde_json = "1.0.91"
futures = "0.3.26"
axum-macros = "0.3.2"
